prover-ray/zkcdriver/testdata/synced/invalid/basic_20.zkc
//error:3:11-17:expected type u32
fn concat(hi:u16,lo:u8) -> (word:u32) {
   word = hi::lo
}
